--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,11 +1,12 @@
+<!--
 <div class="comments-area">
   <div class="comments-inner">
     <h2 class="comments-title">Comments</h2>
     <div id="disqus_thread"></div>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by
         Disqus</a>.</noscript>
-  </div><!-- .comments-inner -->
-</div><!-- .comments-area -->
+  </div>&lt;!&ndash; .comments-inner &ndash;&gt;
+</div>&lt;!&ndash; .comments-area &ndash;&gt;
 
 <script type="text/javascript">
   var disqus_shortname = '{{ site.disqus }}';
@@ -16,3 +17,4 @@
     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
   })();
 </script>
+-->
