fix: footer.html, 버그 수정

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     {% if site.footer.has_social %}
       {% include social.html %}
     {% endif %}
-  </div>&lt;!&ndash; .offsite-links &ndash;&gt;
+  </div><!-- .offsite-links -->
   <div class="footer-bottom">
     <div class="site-info">
       {{ site.footer.content | markdownify }}
